--- a/src/containers/Account/Account.css
+++ b/src/containers/Account/Account.css
@@ -1,1 +1,9 @@
-
+.Account-page{
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  overflow:hidden;
+  background-color: #4f5d75;
+}
